--- a/test.html
+++ b/test.html
@@ -5,7 +5,25 @@
     <title></title>
   </head>
   <body>
+  <form id="StoreGenerator">
+    <fieldset>
+      <legend>Stores</legend>
+      <label for="storename">Store Name</label>
+      <input type="text" name="storename" >
 
+      <label for="minimum">Min</label>
+      <input name="minimum" type="text">
+
+      <label for="maximum">Max</label>
+      <input name="maximum" type="text">
+
+      <label for="average">Avg</label>
+      <input name="average" type="text">
+
+      <button type="submit">make location</button>
+
+    </fieldset>
+  </form>
   <table id="StoreTable">
 
   </table>
