deleted tests and moved to original

--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <title></title>
   </head>
   <body>
-    <script type="text/javascript" src = "app.js">
-      
-    </script>
+  <form id="StoreGenerator">
+    <fieldset>
+      <legend>Stores</legend>
+      <label for="storename">Store Name</label>
+      <input type="text" name="storename" >
+
+      <label for="minimum">Min</label>
+      <input name="minimum" type="text">
+
+      <label for="maximum">Max</label>
+      <input name="maximum" type="text">
+
+      <label for="average">Avg</label>
+      <input name="average" type="text">
+
+      <button type="submit">make location</button>
+
+    </fieldset>
+  </form>
+  <table id="StoreTable">
+
+  </table>
+  <script type="text/javascript" src="test.js">
+
+  </script>
+
   </body>
 </html>
