--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <table id="StoreTable">
 
   </table>
-  <script type="text/javascript" src="test.js">
+  <script type="text/javascript" src="app.js">
 
   </script>
 
