--- a/index.html
+++ b/index.html
@@ -2,34 +2,58 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Pat's salmon cookies </title>
+    <link rel="stylesheet" href="css/header_nav_footer.css">
+    <link rel="stylesheet" href="css/slides.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
-  <form id="StoreGenerator">
-    <fieldset>
-      <legend>Stores</legend>
-      <label for="storename">Store Name</label>
-      <input type="text" name="storename" >
+    <header>
+      <h1>Pats salmon cookies</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html"> Home </a></li>
+        <li><a href="about.html"> About </a></li>
+        <li><a href="merch.html"> Merchandise </a></li>
+        <li><a href="locations.html"> Locations </a></li>
+        <li><a href="events.html"> Events </a></li>
+      </ul>
+    </nav>
 
-      <label for="minimum">Min</label>
-      <input name="minimum" type="text">
+     <section>
+       <ul id="slides">
+         <li class="slide showing"><img class="1" src="images/chinook.jpg" alt=""> </li>
+         <li class="slide"><img class="2"src="images/cutter.jpeg" alt=""> </li>
+         <li class="slide"> <img class="3" src="images/fish.jpg" alt=""> </li>
+         <li class="slide"> <img class="4" src="images/family.jpg" alt=""> </li>
+         <li class="slide"> <img class="5" src="images/salmon.png" alt=""> </li>
+         <li class="slide"> <img class="6" src="images/frosted-cookie.jpg" alt=""> </li>
+       </ul>
+     </section>
 
-      <label for="maximum">Max</label>
-      <input name="maximum" type="text">
+     <section id="paragraphs">
+       <article class="">
+       <h2>What is Pat's Salmon Cookies</h2>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       </article>
 
-      <label for="average">Avg</label>
-      <input name="average" type="text">
+       <article class="">
+         <h2>Our Cookies</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       </article>
 
-      <button type="submit">make location</button>
+       <article class="">
+         <h2>How we make our cookies</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       </article>
+     </section>
 
-    </fieldset>
-  </form>
-  <table id="StoreTable">
+     <footer>
+       <h4> <a href="SignIn.html">&copy; 2016</a> Pats Salmon Cookies</h4>
+     </footer>
 
-  </table>
-  <script type="text/javascript" src="app.js">
-
-  </script>
-
+     <script type="text/javascript" src="javascript/slides.js">
+     </script>
   </body>
 </html>
