commitiing full cookie stand for submition

--- a/SignIn.html
+++ b/SignIn.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>sign in to owner account</title>
+    <link rel="stylesheet" href="css/SignIn.css">
   </head>
   <body>
     <form id="signownerin" class="signin" action="index.html" method="post">
       <fieldset>
+        <legend>Sign in</legend>
         <label for="firstname">first name</label>
-        <input type="text" name="firstname" value="string">
+        <input type="text" name="firstname" >
 
         <label for="lastname">last name</label>
-        <input type="text" name="lastname" value="string">
+        <input type="text" name="lastname">
 
         <label for="password">password</label>
-        <input type="text" name="password" value="password">
+        <input type="text" name="password">
 
         <label for="codename">code name</label>
-        <input type="text" name="codename" value="string">
+        <input type="text" name="codename">
 
         <button type="submit" name="button">sign in</button>
 
