--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="merch.html"> Merchandise </a></li>
         <li><a href="locations.html"> Locations </a></li>
         <li><a href="events.html"> Events </a></li>
+        <li><a href="SignIn.html"> Owner </a></li>
+
       </ul>
     </nav>
 
