--- a/sales.html
+++ b/sales.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/sales.css">
   </head>
   <body>
   <form id="StoreGenerator">
     <fieldset>
-      <legend>Stores</legend>
+      <legend><h1>STORES</h1></legend>
       <label for="storename">Store Name</label>
       <input type="text" name="storename" >
 
@@ -20,7 +21,7 @@
       <label for="average">Avg</label>
       <input name="average" type="text">
 
-      <button type="submit">make location</button>
+      <input type="submit">
 
     </fieldset>
   </form>
